[gd_scene load_steps=15 format=3 uid="uid://dqkct1jf1r0qk"]

[ext_resource type="PackedScene" uid="uid://debtaix1wqmxs" path="res://Assets/Scenes/Object/Enemy/Enemy.tscn" id="1_r1thb"]
[ext_resource type="Texture2D" uid="uid://cbjq1psi0y4h1" path="res://Assets/Image/Map/MAP.png" id="2_2oaqt"]
[ext_resource type="Script" uid="uid://bohmsnqftmtf4" path="res://Assets/Scenes/Object/Enemy/ice.gd" id="2_8bgcu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_io0i8"]
atlas = ExtResource("2_2oaqt")
region = Rect2(720, 518, 15, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apl78"]
atlas = ExtResource("2_2oaqt")
region = Rect2(737, 518, 15, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8u5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_io0i8")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apl78")
}],
"loop": true,
"name": &"static",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceum0"]
size = Vector2(14, 32)

[sub_resource type="Animation" id="Animation_4mjp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mpl2t"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vhtbw"]
resource_name = "reset"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(0, -48), Vector2(0, 1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(0.5, 0.3), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.240855, 0.146608, 0.0]
}

[sub_resource type="Animation" id="Animation_k5x41"]
resource_name = "swing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(2, -2),
"update": 0,
"values": [-0.174533, 0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0nuex"]
_data = {
&"RESET": SubResource("Animation_4mjp3"),
&"idle": SubResource("Animation_mpl2t"),
&"reset": SubResource("Animation_vhtbw"),
&"swing": SubResource("Animation_k5x41")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x46yx"]
size = Vector2(10, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dibf"]
size = Vector2(44, 936.667)

[node name="Ice" instance=ExtResource("1_r1thb")]
collision_layer = 9
collision_mask = 1
script = ExtResource("2_8bgcu")
mode = 0

[node name="Sprite" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_u8u5j")
animation = &"static"
offset = Vector2(0, 3)

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_ceum0")
one_way_collision = true

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_0nuex")
}

[node name="HitBox" parent="." index="4"]
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_x46yx")

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 0.5)

[node name="CheckPlayer" type="Area2D" parent="." index="7"]
scale = Vector2(0.5, 0.3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPlayer" index="0"]
position = Vector2(0, 401.667)
shape = SubResource("RectangleShape2D_3dibf")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_shape_entered" from="CheckPlayer" to="." method="_on_check_player_body_shape_entered"]
[connection signal="body_shape_exited" from="CheckPlayer" to="." method="_on_check_player_body_shape_exited"]
